# fastapi_starterkit

./: README.md  pyproject.toml
fastapi_starterkit/: main.py  utils.py
fastapi_starterkit/crud/: endpoint.py  endpoints.py  mapper.py  service.py
fastapi_starterkit/data/domain/: document.py  entity.py  pageable.py  sort.py
fastapi_starterkit/data/repository/: core.py  mongo.py  sql.py
fastapi_starterkit/web/: decorator.py  dependencies.py  rest.py  schema.py
tests/: conftest.py
tests/crud/: test_endpoint.py  test_router.py
tests/data/domain/: test_pageable.py  test_sort.py
tests/data/repository/: test_mongo.py  test_sql.py
tests/web/: test_dependencies.py
