[tool.poetry]
name = "fastapi_starterkit"
version = "0.1.0"
description = ""
authors = ["kobibleu <vincent.terese@live.fr>"]

[tool.poetry.dependencies]
python = "^3.8"

pydantic = "^1.9"
fastapi = "^0.75"
uvicorn = { version = "^0.17", extras = [ "standard" ] }

SQLAlchemy = { version = "^1.4", optional = true }
motor = { version = "^3.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.18"
aiosqlite  = "^0.17"
requests = "*"
mongomock-motor = "0.0.7"

[tool.poetry.extras]
sqlalchemy = ["SQLAlchemy"]
mongo = ["motor"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

